[package]
name = "bsh"
version = "2.1.7"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bsh"

[features]
default = []
cpi = ["no-entrypoint"]
mainnet = ["beton-shared-types/mainnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "beton-shared-types/idl-build"]
test-mode = []


[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.1", features = ["metadata"] }
beton-shared-types = { path = "../../crates/shared-types" }
solana-instructions-sysvar = "3.0.0"
solana-sdk-ids = "2.2.1"
solana-system-interface = "1.0.0"
solana-security-txt = "1.1.2"

